--- a/wonkyung/package.json
+++ b/wonkyung/package.json
@@ -10,12 +10,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "express": "^4.18.2"
-  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "typeorm": "^0.3.11"
