[이한재] Assignment2: 유저 회원가입

--- a/hanjaelee/.env.sample
+++ b/hanjaelee/.env.sample
@@ -1,4 +1,4 @@
-DATABASE_URL="mysql://{username}:{password}@{hostname}:{port}/{database}
+DATABASE_URL="mysql://{username}:{password}@{hostname}:{port}/{database}"
 
 PORT = YOUR PORT NUMBER SHOULD BE HERE
 
