[42기 이한재] 로그인 API 구현.

--- a/hanjaelee/.env.sample
+++ b/hanjaelee/.env.sample
@@ -9,3 +9,5 @@ TYPEORM_PASSWORD = password
 TYPEORM_DATABASE = database_name
 TYPEORM_PORT = 3306
 TYPEORM_LOGGING = TRUE
+
+SECRET_KEY = mySecretKey
