[42기 이홍열] assignment-2 유저의 비밀번호 검증 및  JWT 발급

--- a/hongyeollee/.env.sample
+++ b/hongyeollee/.env.sample
@@ -7,3 +7,5 @@ TYPEORM_PASSWORD = WRITE YOUR PASSWORD
 TYPEORM_DATABASE = WRITE YOUR DATABASE
 TYPEORM_PORT = WRITE YOUR USING RRDBMS DATABSENAME
 TYPEORM_LOGGING = TRUE
+
+SECRET_KEY = WRITE YOU SECRET KEY
